<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/blue"
            android:padding="25dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/profile_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Name Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/rounded_background"
            android:padding="12dp"
            android:layout_marginTop="4dp" />

        <!-- Email Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_background"
            android:padding="12dp"
            android:textSize="16sp" />

        <!-- Password Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/rounded_background"
            android:padding="12dp"
            android:layout_marginTop="4dp" />

        <!-- Buttons Section -->
        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:padding="5dp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:padding="5dp" />

    </LinearLayout>
</ScrollView>
